--- a/openstack/python-openstackclient/python-openstackclient.spec.j2
+++ b/openstack/python-openstackclient/python-openstackclient.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'python-openstackclient' %}
-{% set upstream_version = upstream_version('3.15.0') %}
+{% set upstream_version = upstream_version('3.16.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -80,6 +80,7 @@ BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 #BuildRequires:  {{ py2pkg('python-ironic-inspector-client') }}
 #BuildRequires:  {{ py2pkg('python-saharaclient') }}
 #BuildRequires:  {{ py2pkg('python-zaqarclient') }}
+BuildRequires:  {{ py2pkg('sphinxcontrib-apidoc') }}
 
 %description -n python-openstackclient-doc
 python-openstackclient is a unified command-line client for the OpenStack APIs.
@@ -95,8 +96,8 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 %build
 %{python_build}
 
-%{__python2} setup.py build_sphinx -b html
-%{__python2} setup.py build_sphinx -b man
+PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
+PBR_VERSION={{ upstream_version }} sphinx-build -b man doc/source doc/build/man
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
