--- a/openstack/python-swiftclient/python-swiftclient.spec.j2
+++ b/openstack/python-swiftclient/python-swiftclient.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'python-swiftclient' %}
-{% set upstream_version = upstream_version('3.5.0') %}
+{% set upstream_version = upstream_version('3.6.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -44,6 +44,7 @@ Summary:        %{summary} - Documentation
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('futures') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 Requires:       %{name} = %{version}
 
