Updated vmware-nsxlib to 13.0.0
Change-Id: I7a621bd7071709a81f934ea7ecb457608961fe5a

--- a/openstack/vmware-nsxlib/vmware-nsxlib.spec.j2
+++ b/openstack/vmware-nsxlib/vmware-nsxlib.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'vmware-nsxlib' %}
-{% set upstream_version = upstream_version('11.0.0') %}
+{% set upstream_version = upstream_version('13.0.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -63,7 +63,7 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 %build
 %{python_build}
 # generate html docs
-%{__python2} setup.py build_sphinx
+PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
 %fdupes doc/build/html/
