--- a/openstack/python-neutronclient/python-neutronclient.spec.j2
+++ b/openstack/python-neutronclient/python-neutronclient.spec.j2
@@ -52,6 +52,9 @@ Requires:       {{ py2pkg('simplejson') }}
 Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
 %if 0%{?suse_version}
+# https://review.openstack.org/585387
+# Needed for osprofiler==2.3.0
+Patch0:         0001-Fix-broken-unittests.patch
 Requires(post): update-alternatives
 Requires(postun): update-alternatives
 %else
