--- a/openstack/os-vif/os-vif.spec.j2
+++ b/openstack/os-vif/os-vif.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'os-vif' %}
-{% set upstream_version = upstream_version('1.10.0') %}
+{% set upstream_version = upstream_version('1.11.1') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -71,7 +71,7 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 %{py2_install}
 
 # generate html docs
-%{__python2} setup.py build_sphinx
+PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
@@ -84,6 +84,7 @@ stestr --test-path="os_vif/tests/unit" run
 %{python2_sitelib}/os_vif
 %{python2_sitelib}/vif_plug_ovs
 %{python2_sitelib}/vif_plug_linux_bridge
+%{python2_sitelib}/vif_plug_noop
 %{python2_sitelib}/*.egg-info
 
 %files doc
