Freezer: switch to cryptography
This was done upstream in I14f58d9d473c20ce7863baa0b2adadbfda268b7a

Change-Id: I26d7260833b0241ae35ed9255ac6bbb08775e864

--- a/openstack/freezer/freezer.spec.j2
+++ b/openstack/freezer/freezer.spec.j2
@@ -22,6 +22,7 @@ BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('PyMySQL') }}
 BuildRequires:  {{ py2pkg('botocore') }}
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
+BuildRequires:  {{ py2pkg('cryptography') }}
 BuildRequires:  {{ py2pkg('ddt') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('python-freezerclient') }}
@@ -39,7 +40,6 @@ BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('paramiko') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('psutil') }}
-BuildRequires:  {{ py2pkg('pycrypto') }}
 BuildRequires:  {{ py2pkg('pymongo') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 BuildRequires:  {{ py2pkg('six') }}
@@ -72,6 +72,7 @@ Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('PyMySQL') }}
 Requires:       {{ py2pkg('botocore') }}
 Requires:       {{ py2pkg('python-cinderclient') }}
+Requires:       {{ py2pkg('cryptography') }}
 Requires:       {{ py2pkg('python-freezerclient') }}
 Requires:       {{ py2pkg('python-glanceclient') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
@@ -85,7 +86,6 @@ Requires:       {{ py2pkg('oslo.service') }}
 Requires:       {{ py2pkg('oslo.utils') }}
 Requires:       {{ py2pkg('paramiko') }}
 Requires:       {{ py2pkg('psutil') }}
-Requires:       {{ py2pkg('pycrypto') }}
 Requires:       {{ py2pkg('pymongo') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('python-swiftclient') }}
