Add testrepository build dependency to oslo.cache
oslotest has dropped its runtime dependency on testrepository[1] but
this package still relies on it, so add it as a build dependency until
it switches to stestr.

[1] https://review.openstack.org/569914

Change-Id: I9a4c55d697301705292dd9b239e1bea470e36f93

--- a/openstack/oslo.cache/oslo.cache.spec.j2
+++ b/openstack/oslo.cache/oslo.cache.spec.j2
@@ -24,6 +24,7 @@ BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pymongo', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('python-memcached', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('dogpile.cache') }}
 Requires:       {{ py2pkg('oslo.config') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
