Add testrepository dep to oslo.versionedobjects
oslotest has dropped its runtime dependency on testrepository[1] but
this package still relies on it, so add it as a build dependency until
it switches to stestr.

[1] https://review.openstack.org/569914

Change-Id: Icea4a84cada859fa2306a6c8116b783e5f26d17c

--- a/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
+++ b/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
@@ -25,6 +25,7 @@ BuildRequires:  {{ py2pkg('oslo.serialization', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.utils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('WebOb') }}
 Requires:       {{ py2pkg('iso8601') }}
