Add testrepository build dependency to pyghmi
oslotest has dropped its runtime dependency on testrepository[1] but
this package still relies on it, so add it as a build dependency until
it switches to stestr.

[1] https://review.openstack.org/569914

Change-Id: I152214c874456d808bc2b687f67ee75b43779698

--- a/openstack/pyghmi/pyghmi.spec.j2
+++ b/openstack/pyghmi/pyghmi.spec.j2
@@ -15,6 +15,7 @@ BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('cryptography', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('cryptography')  }}
 BuildArch:      noarch
 %if 0%{?suse_version}
