Add testrepository build dependency to taskflow
oslotest has dropped its runtime dependency on testrepository[1] but
this package still relies on it, so add it as a build dependency until
it switches to stestr.

[1] https://review.openstack.org/569914

Change-Id: I49d5c16307daeaa87995dbd17306a16fa93aa8f2

--- a/openstack/taskflow/taskflow.spec.j2
+++ b/openstack/taskflow/taskflow.spec.j2
@@ -39,6 +39,7 @@ BuildRequires:  {{ py2pkg('redis', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('retrying', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('stevedore', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('tenacity', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('zake', py_versions=['py2', 'py3']) }}
