--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -59,6 +59,7 @@ BuildRequires:  {{ py2pkg('redis') }}
 BuildRequires:  {{ py2pkg('requests') }}
 BuildRequires:  {{ py2pkg('stevedore') }}
 BuildRequires:  {{ py2pkg('supervisor') }}
+BuildRequires:  {{ py2pkg('testrepository') }}
 BuildRequires:  {{ py2pkg('tornado') }}
 BuildRequires:  sudo
 Requires:       python-%{sname} = %{version}-%{release}
