--- a/openstack/cliff/cliff.spec.j2
+++ b/openstack/cliff/cliff.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'cliff' %}
-{% set upstream_version = upstream_version('2.12.1') %}
+{% set upstream_version = upstream_version('2.13.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -15,7 +15,7 @@ BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('PrettyTable', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('PyYAML', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('cmd2', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('cmd2', py_versions=['py2']) }}
 BuildRequires:  {{ py2pkg('mock', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('python-subunit', py_versions=['py2', 'py3']) }}
