Fix unit tests for mox3 in Python 3.6
https://review.openstack.org/589591 fixes unit tests, but it is not
present in any tagged release yet. This should fix the package build
for Fedora.

Change-Id: I909995fba6ff0e6258ccc39450598822090344fe
(cherry picked from commit cd046cb8aca2501b3c2bf435955a432c6c91c0b0)

--- a/openstack/mox3/mox3.spec.j2
+++ b/openstack/mox3/mox3.spec.j2
@@ -7,6 +7,7 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://bugs.launchpad.net/python-mox3
 Source0:        https://files.pythonhosted.org/packages/source/m/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
+Patch0001:      0001-add-python-3.6-unit-test-job.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('coverage', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('fixtures', py_versions=['py2', 'py3']) }}
@@ -44,7 +45,7 @@ enhancements have been made. The library was tested on Python version
 This package contains documentation in HTML format.
 
 %prep
-%autosetup -n %{pypi_name}-%{version}
+%autosetup -p1 -n %{pypi_name}-%{version}
 %py_req_cleanup
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
