horizon: add new dependency on django_debreach
Depends-On: https://review.openstack.org/#/c/599859/
Change-Id: Ia8f7e3a1bfd0487ad71f27dcf22b3eb97ffbf3fd

--- a/openstack/horizon/horizon.spec.j2
+++ b/openstack/horizon/horizon.spec.j2
@@ -56,6 +56,7 @@ BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('django-nose') }}
 BuildRequires:  {{ py2pkg('django-pyscss') }}
 BuildRequires:  {{ py2pkg('django_compressor') }}
+BuildRequires:  {{ py2pkg('django_debreach') }}
 BuildRequires:  {{ py2pkg('python-glanceclient') }}
 BuildRequires:  {{ py2pkg('python-heatclient') }}
 BuildRequires:  {{ py2pkg('python-keystoneclient') }}
@@ -151,6 +152,7 @@ Requires:       {{ py2pkg('python-cinderclient') }}
 Requires:       {{ py2pkg('django-babel') }}
 Requires:       {{ py2pkg('django-pyscss') }}
 Requires:       {{ py2pkg('django_compressor') }}
+Requires:       {{ py2pkg('django_debreach') }}
 Requires:       {{ py2pkg('futurist') }}
 Requires:       {{ py2pkg('python-glanceclient') }}
 Requires:       {{ py2pkg('python-heatclient') }}
