--- a/openstack/automaton/automaton.spec.j2
+++ b/openstack/automaton/automaton.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'automaton' %}
-{% set upstream_version = upstream_version('1.14.0') %}
+{% set upstream_version = upstream_version('1.15.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -18,7 +18,7 @@ BuildRequires:  {{ py2pkg('debtcollector', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslosphinx', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('PrettyTable') }}
@@ -56,9 +56,7 @@ rm -rf html/.{doctrees,buildinfo}
 %{python_install}
 
 %check
-%{python_expand rm -rf .testrepository
-$python setup.py testr
-}
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %doc README.rst
